--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,7 +6,7 @@
   <tr align="center" height="200">
     <td width="300">X</td>
     <td width="300">0</td>
-    <td width="300"></td></tr>
+    <td width="300">X</td></tr>
   <tr align="center" height="200">
     <td></td><td></td><td></td></tr>
   <tr align="center" height="200">
